--- a/leastSquare.ipynb
+++ b/leastSquare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "78019a80-8dbd-469c-99a5-b3498704a8c4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "f49f74d8-9bae-4291-a82b-952941e076de",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "e370d64d-946c-4a80-b17f-8caf10bf7930",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "51.000000000009216"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "6231fc7e-6d37-4151-81c8-c9ff51d63673",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "       [-19.35294118,  -3.58823529,   2.23529412]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "1a2ef502-ddf9-4f35-94c1-3adef61147b3",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "c74adb01-438b-40ab-9c96-3bc7cef37e0b",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "       [-1.11764706]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "97eb99bd-def8-4e2d-9825-82f949dfd65e",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "cd50a5a3-5fd8-4465-898c-457b9386ee02",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "array([-2.21568627])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
